--- a/package.json
+++ b/package.json
@@ -13,18 +13,25 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
-    "cookieparser": "^0.1.0",
     "axios": "^0.18.0",
+    "cookieparser": "^0.1.0",
     "iview": "^3.0.0",
+    "js-cookie": "^2.2.0",
+    "localStorage": "^1.0.4",
+    "node-localstorage": "^1.3.1",
     "nuxt": "^1.0.0",
     "vue": "^2.5.13",
     "vue-server-renderer": "^2.5.13",
-    "vue-template-compiler": "^2.5.13"
+    "vue-template-compiler": "^2.5.13",
+    "vuex-along": "^1.2.5",
+    "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
     "@nuxtjs/axios": "^5.4.1",
     "@nuxtjs/proxy": "^1.3.3",
+    "babel-cli": "^6.26.0",
     "babel-eslint": "^8.2.1",
+    "babel-preset-env": "^1.7.0",
     "eslint": "^4.15.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
